# Hawaii-Bill-Parser

./: Dockerfile  README.md  pyproject.toml  requirements.txt
Documents/: BillTemplate.docx  HeaderTemplate.docx  Output.docx
Output/: test.docx
src/: BillParser.py  __init__.py  cli.py  main.py
